Adding set objectifier, combining general objectifiers from object and record conversion to support the same cases, supporting "complex" map keys by stringifying/parsing them as objects